--- a/R_C14_rates calculation/CTD_nutrients_data.Rmd
+++ b/R_C14_rates calculation/CTD_nutrients_data.Rmd
@@ -46,7 +46,7 @@ colours_cycle <- readxl::read_excel("init_files/colours_cycle.xlsx")
 colours_cycle <- structure(colours_cycle$colour,.Names=colours_cycle$cycle)
 ```
 
-Plot the cycles together until 100 m
+Plot the cycles together until 150 m
 
 # Read table
 ```{r}
@@ -57,7 +57,7 @@ CTD_raw <- readxl::read_excel("data_used/TK_CTD Downcasts.xlsx") %>%
   mutate(date = date(datetime)) %>%
   mutate(time = hour(datetime)) %>%
   mutate(julian_day = julian(date, origin = date("2018-01-01"))) %>%
-  filter(time %in% (9:12) ) %>% # only morning CTD
+  # filter(time %in% (9:12) ) %>% # only morning CTD
   mutate(t_mean = (t+t2)/2) %>% # each CTD has 2 readings. use the average of the two readings.
   mutate(s_mean = (s+s2)/2) %>%
   mutate(os_mean = (os+os2)/2) %>%
@@ -128,13 +128,6 @@ check
 ##Plot temperature
 
 ```{r}
-# library(viridis)
-# #summarise temp data
-# temp_summary <- summarySE(CTD, measurevar="t_mean", groupvars=c("p","cycle_name"), na.rm=TRUE)
-# temp_summary
-# 
-# pd <- position_dodge(0.1) # move them .05 to the left and right
-
 temp_plot <- CTD %>%
   group_by(cycle_name, CTD) %>%
   group_modify(~ add_row(.x,.before=0)) %>% # add gaps in the dataframe for geom_path linebreaks
@@ -155,12 +148,6 @@ temp_plot
 ##Plot salinity
 
 ```{r}
-#summarise salinity data
-# s_summary <- summarySE(CTD, measurevar="s_mean", groupvars=c("p","cycle_name"), na.rm=TRUE)
-# s_summary
-# 
-# pd <- position_dodge(0.1) # move them .05 to the left and right
-
 s_plot <- CTD %>%
   group_by(cycle_name, CTD) %>%
   group_modify(~ add_row(.x,.before=0)) %>% # add gaps in the dataframe for geom_path linebreaks
@@ -198,11 +185,6 @@ ts_plot
 
 ## Plot light
 ```{r}
-#summarise salinity data
-# s_summary <- summarySE(CTD, measurevar="s_mean", groupvars=c("p","cycle_name"), na.rm=TRUE)
-# s_summary
-# 
-# pd <- position_dodge(0.1) # move them .05 to the left and right
 
 par_plot <- CTD %>%
   group_by(cycle_name, CTD) %>%
@@ -244,14 +226,6 @@ o_plot
 ##Plot flourescence
 
 ```{r}
-#summarise flourescnece data
-# f_summary <- summarySE(CTD, measurevar="fl", groupvars=c("p","cycle_name"), na.rm=TRUE)
-# f_summary <- f_summary %>%
-#   group_by(cycle_name) %>%
-#   arrange(p)
-# 
-# pd <- position_dodge(0.1) # move them .05 to the left and right
-
 
 f_plot <- CTD %>%
     filter(fl <=4.5) %>%
@@ -377,6 +351,7 @@ summary_s
 summary_ctd <- full_join(summary_sst, summary_s)
 ```
 
+#check SA1-A and SA1-B
 for checks between SA1-A and SA1-B. The only thing that is different is the fluorescence at DCM. SA1-A  is nearly twice fluorescence of SA1-B.
 ```{r}
 p <- CTD %>%
@@ -458,7 +433,7 @@ p
 ```
 
 #nutrients
-# Read table, combine with C14 hot for the cycle, exp and station number.
+## Read table, combine with C14 hot for the cycle, exp and station number.
 ```{r}
 nutrients_raw <- readxl::read_excel("data_used/TAN1810_nutrients.xls") %>%
   dplyr::rename(CTD = `U_Cast`,
@@ -531,6 +506,15 @@ check <- nutrients  %>%
   select(CTD, date, cycle_name_2) %>%
   distinct()
 check
+
+
+depth_check <- nutrients %>%
+  select(cycle_name, depth) %>%
+  distinct() %>%
+  group_by(cycle_name) %>%
+  arrange(cycle_name,depth) 
+
+depth_check
 ```
 
 #Summary table
@@ -561,6 +545,36 @@ print(xtable(summary),
       include.rownames=FALSE)
 ```
 
+```{r}
+nutrients_sub <- nutrients %>%
+  mutate(depth_cat = case_when(depth == "12" ~ "SUR",
+                              (depth == "40" & cycle_name == "ST1") ~ "DCM",
+                               (depth == "25" & cycle_name == "ST1") ~ "DCM",
+                               (depth == "30" & cycle_name == "ST2") ~ "DCM",
+                               (depth == "40" & cycle_name == "ST2") ~ "DCM",
+                               (depth == "40" & cycle_name == "SA1") ~ "DCM",
+                               (depth == "40" & cycle_name == "SA2") ~ "DCM",
+                               (depth == "70" & cycle_name == "SA3") ~ "DCM",
+                                  TRUE ~as.character(cycle_name))) %>%
+  filter(depth_cat %in% c("SUR", "DCM"))
+
+summary <-   nutrients_sub %>%
+  mutate(nitrate_ammonia = NO3_uM/NH4_uM) %>%
+   mutate(si_nitrate=DRSi_uM/NO3_uM) %>%
+  pivot_longer(cols = c("DRP_uM", "NH4_uM", "NO3_uM", "DRSi_uM", "nitrate_ammonia", "si_nitrate"), names_to = "nutrients", values_to = "conc") %>%
+  group_by(cycle_name, nutrients) %>%
+  summarise(conc_mean = round(mean(conc), 2),
+            conc_sd= round(sd(conc),2)) %>%
+  unite("mean_sd", conc_mean:conc_sd, sep = " ± ") %>%
+  pivot_wider(names_from = nutrients,  values_from = mean_sd) %>%
+  ungroup() %>%
+  select(cycle_name,  "NH4_uM", "NO3_uM","DRP_uM","DRSi_uM", "nitrate_ammonia", "si_nitrate")
+summary
+
+summary_all <- full_join(summary_sst, summary)
+summary_all
+writexl::write_xlsx(summary_all, "summary_ctdnut_2.0.xlsx")
+```
 
 
 Plot nitrate
@@ -771,7 +785,7 @@ p <- nutrients %>%
 p
 ```
 
-#  check for ST1, exp 7 vs exp 8
+##  check for ST1, exp 7 vs exp 8
 7: U9142
 8: U9145
 
