--- a/R_C14_rates calculation/Map_temp.Rmd
+++ b/R_C14_rates calculation/Map_temp.Rmd
@@ -84,7 +84,7 @@ Conventions <- ncatt_get(nc_SST,0,"Conventions")
 ```{r}
 #subset data for NZ area (coordinates lat -46 to -41, lon 172 to -176)
 lon_sub <- which( nc_SST$dim$lon$vals > 171 | nc_SST$dim$lon$vals < -178)
-lat_sub <- which( nc_SST$dim$lat$vals > -47 & nc_SST $dim$lat$vals < -41.5)
+lat_sub <- which( nc_SST$dim$lat$vals > -47 & nc_SST $dim$lat$vals < -41.3)
 lon_sub <- c(which(nc_SST$dim$lon$vals > 171) , which(nc_SST$dim$lon$vals < -178) )
 # replace netCDF fill values with NA's
 tmp_array[tmp_array==fillvalue$value] <- NA
@@ -122,10 +122,10 @@ library(paletteer)
 plot_temp<- ggplot() +
   geom_raster(data = temp_nz_df , aes(x = x, y = y, fill = layer))+
   #scale_colour_paletteer_c("ggthemes::Red-Blue Diverging", limits=c(9, 15))
-  scale_fill_gradientn(colours=rev(brewer.pal(20,"RdBu")), breaks = c(9, 10, 11, 12, 13, 14, 15)) 
+  scale_fill_gradientn(colours=rev(brewer.pal(20,"RdYlBu")), breaks = c(9, 10, 11, 12, 13, 14, 15)) 
   
 plot_temp
-#pdf("figures/GRC/map_temp.pdf", height=4, width=6) ; plot(plot_temp) ; dev.off()
+pdf("C14_map_temp.pdf", height=4, width=6) ; plot(plot_temp) ; dev.off()
 
 ```
 
@@ -140,7 +140,7 @@ library(broom)
 
 ## Coordinates of stations
 ```{r}
-sampling_location <- readxl::read_excel("data_used/TAN1810_14C-Pico_25052020_QA_1.0.xlsx", sheet = "Complete data TAN1810", skip = 11) %>%
+sampling_location <- readxl::read_excel("data_used/TAN1810_14C-Pico_25052020_QA_1.2.xlsx", sheet = "Complete data TAN1810", skip = 11) %>%
   dplyr::select (`Cycle#`, `EXP#`, `Lat_DD`, `Long_DD`) %>%   
      rename(cycle = `Cycle#`,
             exp = `EXP#`,
@@ -156,12 +156,12 @@ sampling_location <- readxl::read_excel("data_used/TAN1810_14C-Pico_25052020_QA_
 ```{r}
 library(ggOceanMaps)
 #THIS WORKS!
-p <- basemap(limits = c(172, -179, -46, -41.5), rotate = TRUE,  lon.interval = 2, lat.interval = 1,grid.size = 0.5) + 
+p <- basemap(limits = c(172, -179, -46, -41.5), rotate = TRUE,  lon.interval = 2, lat.interval = 1,grid.size = 0.5, bathymetry = TRUE, bathy.style = "poly_greys") + 
   geom_spatial_point(data = sampling_location, aes(x = long, y = lat))
 
 p
 
-pdf("map_c14.pdf", height=5, width=7) ; plot(p) ; dev.off()
+ pdf("c14_map_bathy.pdf", height=5, width=7) ; plot(p) ; dev.off()
 ```
 
 ```{r, eval=FALSE}
